change self_sender to have 4 TCP connections with local server with distinct rx (irq) rings

--- a/hb-queue-receiver/Makefile
+++ b/hb-queue-receiver/Makefile
@@ -1,7 +1,10 @@
-all: hb_queue
+all: hb_queue self_sender
 
 hb_queue:
 	gcc hb_queue.c -Wall -lrt -L. -lhashtable -D__WITH_MURMUR -lpthread -lnfnetlink -lnetfilter_queue -o hb_queue
 
+self_sender:
+	gcc self_sender.c -lpthread -o self_sender
+
 clean:
-	rm hb_queue
+	rm hb_queue self_sender
