--- a/hb-queue-receiver/Makefile
+++ b/hb-queue-receiver/Makefile
@@ -3,8 +3,11 @@ INCLUDE = -I./include
 
 all: hb_queue self_sender hb_receiver udp_sender
 
-hb_queue:
-		gcc $(SRCDIR)/hb_queue.c -Wall $(INCLUDE) -L./lib -lhashtable -lrt  -D__WITH_MURMUR -lpthread -lnfnetlink -lnetfilter_queue -o hb_queue
+utility:
+		gcc -c $(SRCDIR)/utility.c $(INCLUDE)
+
+hb_queue: utility
+		gcc $(SRCDIR)/hb_queue.c utility.o -Wall $(INCLUDE) -L./lib -lhashtable -lrt -D__WITH_MURMUR -lpthread -lnfnetlink -lnetfilter_queue -o hb_queue
 
 self_sender:
 		gcc $(SRCDIR)/self_sender.c $(INCLUDE) -lpthread -o self_sender
@@ -16,4 +19,4 @@ udp_sender:
 		gcc $(SRCDIR)/udp_sender.c $(INCLUDE) -o udp_sender
 
 clean:
-		rm hb_queue self_sender hb_receiver udp_sender
+		rm hb_queue self_sender hb_receiver udp_sender *.o
