modify Makefile for hb-queue-receiver

--- a/hb-queue-receiver/Makefile
+++ b/hb-queue-receiver/Makefile
@@ -1,22 +1,35 @@
-SRCDIR = ./src
+CC = gcc
+
+CFLAGS = -Wall -D__WITH_MURMUR
+
 INCLUDE = -I./include
 
-all: hb_queue self_sender hb_receiver udp_sender
+SRCS = src/utility.c
 
-utility:
-		gcc -c $(SRCDIR)/utility.c $(INCLUDE)
+OBJS = $(SRCS:.c=.o)
 
-hb_queue: utility
-		gcc $(SRCDIR)/hb_queue.c utility.o -Wall $(INCLUDE) -L./lib -lhashtable -lrt -D__WITH_MURMUR -lpthread -lnfnetlink -lnetfilter_queue -o hb_queue
+all: bin/hb_queue bin/self_sender bin/hb_receiver bin/udp_sender
 
-self_sender:
-		gcc $(SRCDIR)/self_sender.c $(INCLUDE) -lpthread -o self_sender
+bin/hb_queue: src/hb_queue.o $(OBJS)
+	@mkdir -p bin
+	$(CC) $^ -L./lib -lhashtable -lrt -lpthread -lnfnetlink -lnetfilter_queue -o $@
 
-hb_receiver:
-		gcc $(SRCDIR)/hb_receiver.c $(INCLUDE) -lpthread -o hb_receiver
+bin/self_sender: src/self_sender.o
+	@mkdir -p bin
+	gcc $^ -lpthread -o $@
 
-udp_sender:
-		gcc $(SRCDIR)/udp_sender.c $(INCLUDE) -o udp_sender
+bin/hb_receiver: src/hb_receiver.o
+	@mkdir -p bin
+	$(CC) $^ -lpthread -o $@
+
+bin/udp_sender: src/udp_sender.o
+	@mkdir -p bin
+	$(CC) $^ -o $@
+
+%.o: %.c
+	$(CC) $< $(CFLAGS) $(INCLUDE) -c -o $@
 
 clean:
-		rm hb_queue self_sender hb_receiver udp_sender *.o
+	rm -rf build bin *.o src/*.o
+
+.PHONY: clean
