add netlink_drops and nfqueue pid in drop.c drop.h

--- a/no-hb-drop/queue/Makefile
+++ b/no-hb-drop/queue/Makefile
@@ -3,7 +3,8 @@ INCLUDE = -I./include
 
 all: queue 
 
-queue:
+queue: queue.c
+
 	gcc queue.c -Wall -D__WITH_MURMUR -lnfnetlink -lnetfilter_queue -o queue
 
 clean:
