--- a/hb-sender/kmodules/hb_sender_tracker/Makefile
+++ b/hb-sender/kmodules/hb_sender_tracker/Makefile
@@ -1,7 +1,7 @@
 EXTRA_CFLAGS := -I./
 
 obj-m += hb_sender_tracker.o 
-hb_sender_tracker-objs := hb_sender_debugfs.o hb_sender_kretprobe.o hb_sender_main.o
+hb_sender_tracker-objs := hb_sender_debugfs.o hb_sender_kretprobe.o hb_sender_netfilter.o hb_sender_main.o
 
 all:
 	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
