--- a/heartbeat/Makefile
+++ b/heartbeat/Makefile
@@ -10,17 +10,17 @@ bin/hb_queue: src/hb_queue.o src/drop.o src/utility.o
 	@mkdir -p bin
 	$(CC) $^ -L./lib -lhashtable -lrt -lpthread -lnfnetlink -lnetfilter_queue lib/liblist.a -o $@
 
-bin/self_sender: src/self_sender.o
+bin/receiver: src/receiver.o src/barrier.o src/hb_server.o
 	@mkdir -p bin
 	$(CC) $^ -lpthread -o $@
 
 bin/barrier: src/barrier.o
 	@mkdir -p bin
-	$(CC) $^ -lpthread -o $@
+	$(CC) $^ -o $@
 
-bin/hb_receiver: src/hb_receiver.o
+bin/hb_server: src/hb_server.o
 	@mkdir -p bin
-	$(CC) $^ -lpthread -o $@
+	$(CC) $^ -o $@
 
 bin/udp_sender: src/udp_sender.o
 	@mkdir -p bin
