--- a/heartbeat/Makefile
+++ b/heartbeat/Makefile
@@ -14,15 +14,7 @@ bin/receiver: src/receiver.o src/barrier.o src/hb_server.o
 	@mkdir -p bin
 	$(CC) $^ -lpthread -o $@
 
-bin/barrier: src/barrier.o
-	@mkdir -p bin
-	$(CC) $^ -o $@
-
-bin/hb_server: src/hb_server.o
-	@mkdir -p bin
-	$(CC) $^ -o $@
-
-bin/udp_sender: src/udp_sender.o
+bin/sender: src/sender.o src/helper.o
 	@mkdir -p bin
 	$(CC) $^ -o $@
 
