remove request receipt from barrier to hb_server

--- a/heartbeat/Makefile
+++ b/heartbeat/Makefile
@@ -4,13 +4,13 @@ CFLAGS = -Wall -ggdb -D__WITH_MURMUR
 
 INCLUDE = -I./include
 
-all: bin/hb_queue bin/self_sender bin/hb_receiver bin/udp_sender bin/barrier
+all: bin/receiver bin/sender
 
-bin/hb_queue: src/hb_queue.o src/drop.o src/utility.o
-	@mkdir -p bin
-	$(CC) $^ -L./lib -lhashtable -lrt -lpthread -lnfnetlink -lnetfilter_queue lib/liblist.a -o $@
+#bin/hb_queue: src/hb_queue.o src/drop.o src/utility.o
+#	@mkdir -p bin
+#	$(CC) $^ -L./lib -lhashtable -lrt -lpthread -lnfnetlink -lnetfilter_queue lib/liblist.a -o $@
 
-bin/receiver: src/receiver.o src/barrier.o src/hb_server.o
+bin/receiver: src/receiver.o src/barrier.o src/hb_server.o src/queue.o src/helper.o
 	@mkdir -p bin
 	$(CC) $^ -lpthread -o $@
 
