receiver without barrier test

--- a/heartbeat/Makefile
+++ b/heartbeat/Makefile
@@ -1,27 +1,24 @@
 CC = gcc
 
-CFLAGS = -Wall -ggdb -D__WITH_MURMUR
+CFLAGS = -fPIC -Wall -ggdb -D__WITH_MURMUR
 
 INCLUDE = -I./include
 
-all: bin/receiver bin/sender
+all: build/libreceiver.so
 
-#bin/hb_queue: src/hb_queue.o src/drop.o src/utility.o
-#	@mkdir -p bin
-#	$(CC) $^ -L./lib -lhashtable -lrt -lpthread -lnfnetlink -lnetfilter_queue lib/liblist.a -o $@
+build/libreceiver.so: src/receiver.o src/barrier.o src/hb_server.o src/queue.o src/helper.o
+	@mkdir -p build
+	$(CC) -shared -fPIC -o $@ $^ -lc
+	#$(CC) $^ -L./lib -lnfnetlink -lnetfilter_queue -lpthread -lrt -o $@
 
-bin/receiver: src/receiver.o src/barrier.o src/hb_server.o src/queue.o src/helper.o
-	@mkdir -p bin
-	$(CC) $^ -lpthread -o $@
-
-bin/sender: src/sender.o src/helper.o
-	@mkdir -p bin
-	$(CC) $^ -o $@
+build/libsender.so: src/sender.o src/helper.o
+	@mkdir -p build
+	$(CC) -shared -fPIC -o $@ $^ -lc
 
 %.o: %.c
 	$(CC) $< $(CFLAGS) $(INCLUDE) -c -o $@
 
 clean:
-	rm -rf build bin *.o src/*.o
+	rm -rf build/*.so *.o src/*.o
 
 .PHONY: clean
