change sending_time to sent_epoch in hb_sender_tracker and add clear file

--- a/heartbeat/Makefile
+++ b/heartbeat/Makefile
@@ -4,16 +4,16 @@ CFLAGS = -fPIC -Wall -ggdb -D__WITH_MURMUR
 
 INCLUDE = -I./include
 
-all: build/libreceiver.so
+all: receiver sender
 
-build/libreceiver.so: src/receiver.o src/barrier.o src/hb_server.o src/queue.o src/helper.o
+receiver: src/receiver.o src/barrier.o src/hb_server.o src/queue.o src/helper.o
 	@mkdir -p build
-	$(CC) -shared -fPIC -o $@ $^ -lc
+	$(CC) -shared -fPIC -o build/libreceiver.so $^ -lc
 	#$(CC) $^ -L./lib -lnfnetlink -lnetfilter_queue -lpthread -lrt -o $@
 
-build/libsender.so: src/sender.o src/helper.o
+sender: src/sender.o src/helper.o
 	@mkdir -p build
-	$(CC) -shared -fPIC -o $@ $^ -lc
+	$(CC) -shared -fPIC -o build/libsender.so $^ -lc
 
 %.o: %.c
 	$(CC) $< $(CFLAGS) $(INCLUDE) -c -o $@
