fix the bug which is caused by not releasing lock before sleep

--- a/heartbeat/Makefile
+++ b/heartbeat/Makefile
@@ -1,6 +1,6 @@
 CC = gcc
 
-CFLAGS = -fPIC -Wall -ggdb -D__WITH_MURMUR
+CFLAGS = -fPIC -shared -Wall -ggdb -D__WITH_MURMUR
 
 INCLUDE = -I./include
 
@@ -8,12 +8,12 @@ all: receiver sender
 
 receiver: src/receiver.o src/barrier.o src/hb_server.o src/queue.o src/helper.o
 	@mkdir -p build
-	$(CC) -shared -fPIC -o build/libreceiver.so $^ -lc
-	#$(CC) $^ -L./lib -lnfnetlink -lnetfilter_queue -lpthread -lrt -o $@
+	$(CC) $(CFLAGS) -o build/libreceiver.so $^ -lc
+	#$(CC) $^ -L./lib -lnfnetlink -lnetfilter_queue -lpthread -lrt ./lib/liblist.a -lhashtable -o $@
 
 sender: src/sender.o src/helper.o
 	@mkdir -p build
-	$(CC) -shared -fPIC -o build/libsender.so $^ -lc
+	$(CC) $(CFLAGS) -o build/libsender.so $^ -lc
 
 %.o: %.c
 	$(CC) $< $(CFLAGS) $(INCLUDE) -c -o $@
