--- a/hb-receiver/others/kprobe_latency/Makefile
+++ b/hb-receiver/others/kprobe_latency/Makefile
@@ -1,6 +1,6 @@
 EXTRA_CFLAGS := -I./
 
-obj-m += my_test.o 
+obj-m += kprobe_latency.o 
 
 all:
 		make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
