--- a/heartbeat/kmodule/send/hb_sender_tracker_opt/Makefile
+++ b/heartbeat/kmodule/send/hb_sender_tracker_opt/Makefile
@@ -1,7 +1,7 @@
 EXTRA_CFLAGS := -I./
 
 obj-m += hb_sender_tracker_opt.o 
-hb_sender_tracker_opt-objs := debugfs.o kretprobe.o netfilter.o main.o
+hb_sender_tracker_opt-objs := debugfs.o kprobe.o netfilter.o main.o
 
 all:
 	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
